--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+1.04    2005-05-03
+
+  - Fixed distribution broken by
+    metadata-aware tar on Mac OS X 10.4.
+
 1.03    2005-05-02
 
   - Updated to work with Pluggable Email::FolderType
